GuildHall Finished - clean version without secrets

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Midtrans Configuration
+MIDTRANS_MERCHANT_ID=G451332325
+MIDTRANS_SERVER_KEY=your-midtrans-server-key-here
+MIDTRANS_CLIENT_KEY=Mid-client-kE1SiQYQI3NATCfx
+MIDTRANS_IS_PRODUCTION=false
