--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -16,10 +16,15 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
+        fastcgi_read_timeout 300;
+        fastcgi_connect_timeout 300;
     }
 
     location ~ /\.(?!well-known).* {
