--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -26,7 +26,7 @@ stdout_logfile_maxbytes=0
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600
-autostart=true
+autostart=false
 autorestart=true
 stopasgroup=true
 killasgroup=true
@@ -35,14 +35,16 @@ numprocs=2
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/worker.log
 stopwaitsecs=3600
+startretries=3
 
 [program:laravel-reverb]
 command=php /var/www/html/artisan reverb:start --host=0.0.0.0 --port=8080
-autostart=true
+autostart=false
 autorestart=true
 stopasgroup=true
 killasgroup=true
 user=www-data
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/reverb.log
+startretries=3
 
