Disable Pail auto-discovery and improve startup script

--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -26,7 +26,7 @@ stdout_logfile_maxbytes=0
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600
-autostart=false
+autostart=true
 autorestart=true
 stopasgroup=true
 killasgroup=true
@@ -36,10 +36,11 @@ redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/worker.log
 stopwaitsecs=3600
 startretries=3
+startsecs=10
 
 [program:laravel-reverb]
 command=php /var/www/html/artisan reverb:start --host=0.0.0.0 --port=8080
-autostart=false
+autostart=true
 autorestart=true
 stopasgroup=true
 killasgroup=true
@@ -47,4 +48,5 @@ user=www-data
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/reverb.log
 startretries=3
+startsecs=10
 
