--- a/docker/php/www.conf
+++ b/docker/php/www.conf
@@ -4,11 +4,12 @@ group = www-data
 listen = 127.0.0.1:9000
 listen.owner = www-data
 listen.group = www-data
+listen.mode = 0660
 pm = dynamic
 pm.max_children = 50
-pm.start_servers = 5
-pm.min_spare_servers = 5
-pm.max_spare_servers = 35
+pm.start_servers = 3
+pm.min_spare_servers = 2
+pm.max_spare_servers = 10
 pm.max_requests = 500
 pm.status_path = /status
 ping.path = /ping
