--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -6,9 +6,10 @@ logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
 
 [program:php-fpm]
-command=php-fpm
+command=php-fpm -F
 autostart=true
 autorestart=true
+priority=10
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
