--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -19,6 +19,7 @@ stdout_logfile_maxbytes=0
 command=nginx -g 'daemon off;'
 autostart=true
 autorestart=true
+priority=20
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
