--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen ${PORT:-80};
     server_name _;
     root /var/www/html/public;
     index index.php index.html;
