--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -27,7 +27,7 @@ stdout_logfile_maxbytes=0
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+command=/bin/sh -c "sleep 5 && php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600"
 autostart=true
 autorestart=true
 stopasgroup=true
@@ -37,11 +37,11 @@ numprocs=2
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/worker.log
 stopwaitsecs=3600
-startretries=3
-startsecs=10
+startretries=2
+startsecs=15
 
 [program:laravel-reverb]
-command=php /var/www/html/artisan reverb:start --host=0.0.0.0 --port=8080
+command=/bin/sh -c "sleep 5 && php /var/www/html/artisan reverb:start --host=0.0.0.0 --port=8080"
 autostart=true
 autorestart=true
 stopasgroup=true
@@ -49,6 +49,6 @@ killasgroup=true
 user=www-data
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/reverb.log
-startretries=3
-startsecs=10
+startretries=2
+startsecs=15
 
