Disable workers/reverb on startup to prevent crashes, focus on getting web server working

--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -27,28 +27,24 @@ stdout_logfile_maxbytes=0
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=/bin/sh -c "sleep 5 && php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600"
-autostart=true
+command=/bin/sh -c "sleep 10 && php /var/www/html/artisan queue:work --sleep=3 --tries=3 --max-time=3600 || sleep 60"
+autostart=false
 autorestart=true
 stopasgroup=true
 killasgroup=true
 user=www-data
-numprocs=2
+numprocs=1
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/worker.log
 stopwaitsecs=3600
-startretries=2
-startsecs=15
 
 [program:laravel-reverb]
-command=/bin/sh -c "sleep 5 && php /var/www/html/artisan reverb:start --host=0.0.0.0 --port=8080"
-autostart=true
+command=/bin/sh -c "sleep 10 && php /var/www/html/artisan reverb:start --host=0.0.0.0 --port=8080 || sleep 60"
+autostart=false
 autorestart=true
 stopasgroup=true
 killasgroup=true
 user=www-data
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/reverb.log
-startretries=2
-startsecs=15
 
