--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen ${PORT:-80};
+    listen 80;
     server_name _;
     root /var/www/html/public;
     index index.php index.html;
@@ -12,6 +12,13 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
+    
+    # Health check endpoint
+    location = /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
 
     error_page 404 /index.php;
 
