--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -13,11 +13,16 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
     
-    # Health check endpoint
+    # Health check endpoint (bypasses PHP)
     location = /health {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
+    }
+    
+    # Laravel health check (uses PHP)
+    location = /up {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     error_page 404 /index.php;
