Fix session driver to use database with MySQL connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,8 @@ services:
       - REDIS_PORT=${REDIS_PORT:-6379}
       - QUEUE_CONNECTION=${QUEUE_CONNECTION:-redis}
       - CACHE_DRIVER=${CACHE_DRIVER:-redis}
-      - SESSION_DRIVER=${SESSION_DRIVER:-redis}
+      - SESSION_DRIVER=${SESSION_DRIVER:-database}
+      - DB_SESSION_CONNECTION=${DB_SESSION_CONNECTION:-mysql}
       - MIDTRANS_MERCHANT_ID=${MIDTRANS_MERCHANT_ID}
       - MIDTRANS_SERVER_KEY=${MIDTRANS_SERVER_KEY}
       - MIDTRANS_CLIENT_KEY=${MIDTRANS_CLIENT_KEY}
