--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -19,10 +19,12 @@ server {
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
-    
-    # Laravel health check (uses PHP)
-    location = /up {
-        try_files $uri $uri/ /index.php?$query_string;
+
+    # Serve static assets from build directory
+    location /build {
+        try_files $uri =404;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
     error_page 404 /index.php;
