Fix Mixed Content: Configure TrustProxies and pass HTTPS headers from Railway proxy

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -36,6 +36,9 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
+        # Pass proxy headers to PHP for HTTPS detection
+        fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
+        fastcgi_param HTTP_X_FORWARDED_FOR $proxy_add_x_forwarded_for;
         fastcgi_hide_header X-Powered-By;
         fastcgi_read_timeout 300;
         fastcgi_connect_timeout 300;
