--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,6 +6,11 @@ server {
 
     charset utf-8;
 
+    # Trust Railway's proxy headers for HTTPS detection
+    set_real_ip_from 0.0.0.0/0;
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
@@ -36,9 +41,10 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
-        # Pass proxy headers to PHP for HTTPS detection
-        fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
+        # Pass proxy headers to PHP for HTTPS detection (Railway sets X-Forwarded-Proto)
+        fastcgi_param HTTP_X_FORWARDED_PROTO $http_x_forwarded_proto;
         fastcgi_param HTTP_X_FORWARDED_FOR $proxy_add_x_forwarded_for;
+        fastcgi_param HTTPS $http_x_forwarded_proto;
         fastcgi_hide_header X-Powered-By;
         fastcgi_read_timeout 300;
         fastcgi_connect_timeout 300;
