--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -32,6 +32,20 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # Proxy WebSocket connections to Reverb server
+    location /app/ {
+        proxy_pass http://127.0.0.1:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 86400;
+    }
+
     error_page 404 /index.php;
 
     location ~ \.php$ {
