Enable Reverb server to start automatically

--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -40,7 +40,7 @@ stopwaitsecs=3600
 
 [program:laravel-reverb]
 command=/bin/sh -c "sleep 10 && php /var/www/html/artisan reverb:start --host=0.0.0.0 --port=8080 || sleep 60"
-autostart=false
+autostart=true
 autorestart=true
 stopasgroup=true
 killasgroup=true
